# clockwidget

./: CMakeLists.txt  README.md  ReadMe.txt  analogue.qml  clockwidget.pro  digital.qml  empty.qml  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  myUDP.cpp  myUDP.h  myudp.cpp  resource.qrc  udpclient.cpp  udpclient.h  udpserver.cpp  udpserver.h
